<resources>
    <string name="app_name">UniSell Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="make_listing">Make Listing</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="mission">Mission</string>
    <string name="other">Other</string>
    <string name="dorm_essentials">Dorm Essentials</string>
    <string name="school_supplies">School Supplies</string>
    <string name="textbooks">Textbooks</string>
    <string name="technoloy">Technoloy</string>
    <string name="lab_equipment">Lab Equipment</string>
</resources>