<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menuhome"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/menu_person"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_make_listing"
            android:icon="@drawable/add_circle"
            android:title="@string/make_listing" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/baseline_bookmark_24"
            android:title="@string/favorites" />
    </group>
</menu>