<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.unisellapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.unisellapplication.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.unisellapplication.ui.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_make_listing"
        android:name="com.example.unisellapplication.ui.create_listing.CreateListingFragment"
        android:label="@string/make_listing"
        tools:layout="@layout/fragment_create_listing" />
    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.unisellapplication.MyFavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_my_favorites" />
    <fragment
        android:id="@+id/nav_mission"
        android:name="com.example.unisellapplication.ui.mission.MissionFragment"
        android:label="@string/mission"
        tools:layout="@layout/fragment_my_favorites" />

    <fragment
        android:id="@+id/nav_dorms"
        android:name="com.example.unisellapplication.ui.category.DormFragment"
        android:label="@string/dorm_essentials"
        tools:layout="@layout/fragment_my_favorites" />
</navigation>